fix: song card styles with height 100%, add overflow scroll to description & add grouping algorythm

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -36,7 +36,7 @@
   &__song-card-player-container {
     @include for-tablet {
       margin-left: 0;
-      padding-top: 20px;
+      // padding-top: 20px;
     }
 
     @include for-desktop {
