--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -1,6 +1,6 @@
 .player {
   padding: 5px;
-  height: 200px;
+  height: 50px;
 
   color: white;
   font: {
