--- a/src/components/SongList/SongList.scss
+++ b/src/components/SongList/SongList.scss
@@ -25,7 +25,8 @@
     }
 
     &_incorrect {
-      background-color: lightcoral;
+      background-color: darkred;
+      color: white;
     }
   }
 
@@ -36,6 +37,7 @@
 
       background-color: transparent;
       text-shadow: 0px 0px 1px black;
+      color: inherit;
       cursor: pointer;
 
       transition: background-color 0.35s ease-out;
